--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Welcome to my website!</h1>
-        <a href="https://github.com/desluOs/personal-website">Link to my github</a>
+        <a href="https://github.com/desluOs/desluOs.github.io">Link to my github</a>
     </body>
 </html>
