--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Welcome to my website!</h1>
-        <a href="https://github.com/desluOs/desluOs.github.io">Link to my github</a>
+        <div class="stuff">
+            <h1>Welcome to my website!</h1>
+            <a href="https://github.com/desluOs/desluOs.github.io">Link to my github</a>
+        </div>
     </body>
 </html>
